# genart

./: Cargo.toml
src/: main.rs  perlin_lines.rs  point.rs  spirograph.rs
