[package]
name = "genart"
version = "0.1.0"
authors = ["Aiden Benner <aiden.benner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
png = "0.11.0"
rand = "0.7.3"
cairo-rs = { version = "0.8.1", features = ["png"] }
